--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
       </div>
       <div class="row justify-content-right">
         <div class="col-sm-6">
-        <p>My name is Connor and welcome to my page. I created this website to  showcase my skills, who I am, and what I am capable of. I enjoy learning and constantly growing. I received my Bachelors degree from South Dakota Mines & Technology in Mechanical Engineering, and then developed a passion for the software side of the world and have been learning and educating myself for the past 3 years on software languages and infrastructure to make a move into the computer industry.</p>
+        <p>My name is Connor and welcome to my page. I created this website to  showcase my skills, who I am, and what I am capable of. I enjoy learning and constantly growing. 
+          I received my Bachelors degree from South Dakota Mines & Technology in Mechanical Engineering, and then developed a passion for the software side of the world and 
+          have been learning and educating myself for the past 3 years on software languages and infrastructure to make a move into the computer industry.</p>
         </div>
       </div>
     </section>
