--- a/about.html
+++ b/about.html
@@ -5,56 +5,119 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="style_con.css" type="text/css" rel="stylesheet">
   </head>
 
-  <body>
-    <header class="container">
-      <div class="row">
-        <h1 class="col-sm-6">Connor Carey</h1>
-        <nav class="col-sm-6 text-right">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Me</a>
-          <a href="education.html">Education</a>
-          <a href="experience.html">Experience</a>
-        </nav>
-      </div>
-    </header>
+  <body class="container">
+    <div class="header">
+      <h1 class="header_title">Connor Carey's Portfolio</h1>
+      <h3 class="subheader">About Me</h3>
+    </div>
 
-    <section class="jumbtron">
-      <div class="container">
-        <div class="row">
-          <h2>About Me</h2>
-       </div>
-      </div>
-    </section>
+    <div class="nav">
+      <ul>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Experience</a>
+      </ul>
+    </div>
 
-    <section class="container">
-      <div class="row justify-content-left">
-        <div class="col-sm-6">
-          <img src="headshot.jpg" height=80% width=70% alt="headshot"
-          align=left vspace="30" class="headshot"/>
-        </div>
+    <div class="body">
+      <div class="col c1r1">
+        <img src="headshot.jpg" alt="headshot" vspace="100" class="headshot"/>
       </div>
-      <div class="row justify-content-right">
-        <div class="col-sm-6">
+        <div class="col c2r1">
         <p>My name is Connor and welcome to my page. I created this website to  showcase my skills, who I am, and what I am capable of. I enjoy learning and constantly growing. 
           I received my Bachelors degree from South Dakota Mines & Technology in Mechanical Engineering, and then developed a passion for the software side of the world and 
           have been learning and educating myself for the past 3 years on software languages and infrastructure to make a move into the computer industry.</p>
         </div>
       </div>
-    </section>
+    </div>
 
-     <footer class="container">
+    </div class="footer">
       <div class="row">
-        <p class="col=sm-4">&copy; 2025 Connor Carey</p>
-          <div class="col-sm-2">Github
-            <a href="https://github.com/" target="_blank"></a>
+        <p class="col-sm-4">&copy; 2025 Connor Carey</p>
+          <div class="col-sm-4">Github
+            <a href="https://github.com/Carey1534" target="_blank"></a>
           </div>
-          <div class="col-sm-2">LinkedIn
-            <a href="https://www.linkedin.com/" target="_blank"></a>
+          <div class="col-sm-4">LinkedIn
+            <a href="https://www.linkedin.com/connor-carey15" target="_blank">
+            </a>
           </div>
       </div>
-    </footer>
-  </body>
+    </div>
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
+  <body>
+    <div class="container">
+      <header >
+        <div class="row">
+          <h1 class="header_title">Connor Carey's Portfolio</h1>
+        </div>
+      </header>
+      <section>
+          <nav class="col-md-2">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="education.html">Education</a>
+            <a href="experience.html">Experience</a>
+          </nav>
+    
+
+        <section class="body">
+          <div class="row-1">
+            <div class="row">
+              <h2>About Me</h2>
+          </div>
+          </div>
+        </section>
+
+        <section class="container">
+          <div class="row">
+            <div class="col-md-6 col-1">
+              <img src="headshot.jpg" height=80% width=70% alt="headshot"
+              align=left vspace="30" class="headshot"/>
+            </div>
+          </div>
+          <div class="two-col">
+            <div class="col-md-6 col-2">
+            <p>My name is Connor and welcome to my page. I created this website to  showcase my skills, who I am, and what I am capable of. I enjoy learning and constantly growing. 
+              I received my Bachelors degree from South Dakota Mines & Technology in Mechanical Engineering, and then developed a passion for the software side of the world and 
+              have been learning and educating myself for the past 3 years on software languages and infrastructure to make a move into the computer industry.</p>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <footer class="container">
+        <div class="row">
+          <p class="col=sm-4">&copy; 2025 Connor Carey</p>
+            <div class="col-sm-2">Github
+              <a href="https://github.com/" target="_blank"></a>
+            </div>
+            <div class="col-sm-2">LinkedIn
+              <a href="https://www.linkedin.com/" target="_blank"></a>
+            </div>
+        </div>
+      </footer>
+
+    -->      
+
+      <!-- Ai Chatbot from Chatling -->
+      <script> window.chtlConfig = { chatbotId: "2831345618" } </script>
+      <script async data-id="2831345618" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+    </div>
+    </body>
 </html>
