--- a/experience.html
+++ b/experience.html
@@ -5,21 +5,76 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="style_con.css" type="text/css" rel="stylesheet">
   </head>
 
-  <body>
-     <header class="container">
+
+  <body class="container">
+    <div class="header">
+      <h1 class="header_title">Connor Carey's Portfolio</h1>
+      <h3 class="subheader">My Experience</h3>
+    </div>
+
+    <div class="nav">
+     <ul>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="education.html">Education</a>
+        <a href="experience.html">Experience</a>
+      </ul>
+    </div>
+
+    <div class="body">
+
+
+    </div>
+
+    </div class="footer">
       <div class="row">
-        <h1 class="col-sm-6">Connor Carey</h1>
-        <nav class="col-sm-6 text-right">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Me</a>
-          <a href="education.html">Education</a>
-          <a href="experience.html">Experience</a>
-        </nav>
+        <p class="col-sm-4">&copy; 2025 Connor Carey</p>
+          <div class="col-sm-4">Github
+            <a href="https://github.com/Carey1534" target="_blank"></a>
+          </div>
+          <div class="col-sm-4">LinkedIn
+            <a href="https://www.linkedin.com/connor-carey15" target="_blank">
+            </a>
+          </div>
+      </div>
+    </div>
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
+  <body>
+    <header >
+      <div class="row">
+        <h1 class="header_title">Connor Carey's Portfolio</h1>
       </div>
     </header>
+
+    <nav class="col-md-2">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="education.html">Education</a>
+      <a href="experience.html">Experience</a>
+    </nav>
 
     <section class="jumbtron">
       <div class="container">
@@ -84,5 +139,16 @@
           </div>
       </div>
     </footer>
+
+  -->
+
+     <!-- Ai Chatbot from Chatling -->
+      <!--
+     <script> window.chtlConfig = { chatbotId: "2831345618" } </script>
+     <script async data-id="2831345618" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+     -->
+
+     <script> window.chtlConfig = { chatbotId: "9685123267" } </script>
+<script async data-id="9685123267" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
   </body>
 </html>
