--- a/index.html
+++ b/index.html
@@ -2,26 +2,61 @@
 <html lang="en">
   <head>
     <title>My Personal Portfolio</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="style_con.css" type="text/css" rel="stylesheet">
   </head>
   
-  <body>
-    <header class="container">
+  <body class="container">
+    <div class="header">
+      <h1 class="header_title">Connor Carey's Portfolio</h1>
+      <h3 class="subheader">Home</h3>
+    </div>
+    <div class="nav">
+      <ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="education.html">Education</a>
+      <a href="experience.html">Experience</a>
+      </ul>
+    </div>
+
+    <div class="body">
+
+    </div>
+
+    </div class="footer">
       <div class="row">
-        <h1 class="col-sm-6">Connor Carey</h1>
-        <nav class="col-sm-6 text-right">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Me</a>
-          <a href="education.html">Education</a>
-          <a href="experience.html">Experience</a>
-        </nav>
+        <p class="col-lg-4">&copy; 2025 Connor Carey</p>
+          <div class="col-lg-4">Github
+            <a href="https://github.com/Carey1534" target="_blank"></a>
+          </div>
+          <div class="col-lg-4">LinkedIn
+            <a href="https://www.linkedin.com/connor-carey15" target="_blank">
+            </a>
+          </div>
+      </div>
+    </div>
+  </body>
+
+<!--
+
+  <body>
+    <header >
+      <div class="row">
+        <h1 class="header_title">Connor Carey's Portfolio</h1>
       </div>
     </header>
 
-    <section class="jumbtron">
+    <nav class="col-md-2">
+      <a href="index.html">Home</a>
+      <a href="about.html">About Me</a>
+      <a href="education.html">Education</a>
+      <a href="experience.html">Experience</a>
+    </nav>
+
+    <section class="jumbotron">
       <div class="container">
         <div class="row">
           <h2>Aspiring Software Engineer</h2>
@@ -42,15 +77,20 @@
 
     <footer class="container">
       <div class="row">
-        <p class="col=sm-4">&copy; 2025 Connor Carey</p>
-          <div class="col-sm-2">Github
-            <a href="https://github.com/" target="_blank"></a>
+        <p class="col-sm-4">&copy; 2025 Connor Carey</p>
+          <div class="col-sm-4">Github
+            <a href="https://github.com/Carey1534" target="_blank"></a>
           </div>
-          <div class="col-sm-2">LinkedIn
-            <a href="https://www.linkedin.com/" target="_blank"></a>
+          <div class="col-sm-4">LinkedIn
+            <a href="https://www.linkedin.com/connor-carey15" target="_blank">
+            </a>
           </div>
       </div>
     </footer>
+-->
+
+
+    <!-- Ai Chatbot from Chatling -->
     <script> window.chtlConfig = { chatbotId: "2831345618" } </script>
     <script async data-id="2831345618" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
   </body>
